tests/parser/tests/cases/should_fail/non_existant_import/case.stderr
error: Couldn't import module `does_not_exist`: Module couldn't be found
 --> $DIR/case.hash:1:6
1 |   k := import("does_not_exist");
  |        ^^^^^^^^^^^^^^^^^^^^^^^^ here
